[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/map/MapGenerating.gd" type="Script" id=1]
[ext_resource path="res://meshes/map/tree.tres" type="ArrayMesh" id=2]
[ext_resource path="res://scenes/map/ui/MapGenUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://meshes/map/terrain_mesh.tres" type="CubeMesh" id=4]

[sub_resource type="MultiMesh" id=1]
color_format = 1
transform_format = 1
mesh = ExtResource( 4 )

[sub_resource type="MultiMesh" id=2]
color_format = 1
transform_format = 1
mesh = ExtResource( 2 )

[node name="MapGenerating" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MapGeneratingUI" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Terrain" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Trees" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( -0.573577, 0, -0.819152, 0, 1, 0, 0.819152, 0, -0.573577, 12.1814, 18.639, 7.26831 )
far = 500.0
target = NodePath("../CameraFollowPos")
enabled = true

[node name="CameraFollowPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.5845, 6.84726, 34.1116 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterPos" type="Position3D" parent="."]
__meta__ = {
"_edit_lock_": true
}
[connection signal="back_button_pressed" from="MapGeneratingUI" to="." method="_on_MapGeneratingUI_back_button_pressed"]
[connection signal="forest_comparison_changed" from="MapGeneratingUI" to="." method="_on_MapGeneratingUI_forest_comparison_changed"]
[connection signal="forest_percent_changed" from="MapGeneratingUI" to="." method="_on_MapGeneratingUI_forest_percent_changed"]
[connection signal="forest_perioad_changed" from="MapGeneratingUI" to="." method="_on_MapGeneratingUI_forest_perioad_changed"]
[connection signal="generate_button_pressed" from="MapGeneratingUI" to="." method="_on_MapGeneratingUI_generate_button_pressed"]
[connection signal="length_changed" from="MapGeneratingUI" to="." method="_on_MapGeneratingUI_length_changed"]
[connection signal="randomize_button_pressed" from="MapGeneratingUI" to="." method="_on_MapGeneratingUI_randomize_button_pressed"]
[connection signal="seed_changed" from="MapGeneratingUI" to="." method="_on_MapGeneratingUI_seed_changed"]
[connection signal="start_button_pressed" from="MapGeneratingUI" to="." method="_on_MapGeneratingUI_start_button_pressed"]
[connection signal="width_changed" from="MapGeneratingUI" to="." method="_on_MapGeneratingUI_width_changed"]
